Bug #3290 [Ver]: Can't convert sjis&ujis half-width katakana correctly UJIS part fix